Working User authentication

--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -2,10 +2,6 @@
 <p class="error">{{error}}</p>
 {{/if}}
 <div id="userView">
-<p id="welcome">Welcome {{data.firstName}} {{data.lastName}}, the time is now: {{currentTime}}. Your role in the system is: {{data.role}}.</p>
-<p id="quote">Favorite Quote: {{data.favoriteQuote}}</p>
-{{#if isAdmin}}
-    <a id="adminLink" href="/admin">Admin Page</a>
-{{/if}}
+<p id="welcome">Welcome {{data.firstName}} {{data.lastName}}, the time is now: {{currentTime}}.</p>
 <a id="logoutLink" href="/logout">Logout</a>
 </div>
