--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,37 +1,18 @@
-{{!--
-
-registration handelbars
-
---}}
-
-
 <h1>Register</h1>
 {{#if error}}
 <p class="error"> {{error}}</p>
 {{/if}}
 <form id="signup-form" method="POST" action="/register">
-<label for="firstName">First Name</label>
-<input type="text" id="firstName" name="firstName" required>
-<label for="lastName">Last Name</label>
-<input type="text" id="lastName" name="lastName" required>
+<label for="firstname">First Name</label>
+<input type="text" id="firstName" name="firstName">
+<label for="lastname">Last Name</label>
+<input type="text" id="lastName" name="lastName">
 <label for="username">Username</label>
-<input type="text" id="username" name="username" required>
+<input type="text" id="username" name="username">
 <label for="password">Password</label>
-<input type="password" id="password" name="password" required>
+<input type="password" id="password" name="password">
 <label for="confirmPassword">Confirm Password</label>
-<input type="password" id="confirmPassword" name="confirmPassword" required>
-<label for="favoriteQuote">Favorite Quote</label>
-<input type="text" id="favoriteQuote" name="favoriteQuote" required>
-<label for="themePreference">Theme Preference</label>
-<select id="themePreference" name="themePreference" required>
-    <option value="light">Light</option>
-    <option value="dark">Dark</option>
-</select>
-<label for="role">Role</label>
-<select id="role" name="role" required>
-    <option value="admin">Admin</option>
-    <option value="user">User</option>
-</select>
+<input type="password" id="confirmPassword" name="confirmPassword">
 <button id="submitButton" type="submit">Register</button>
 </form>
 <a href="/login">Already have an account? Click here to log-in</a>
