--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,29 +1,84 @@
 <h1>Register</h1>
 {{#if error}}
-<p class="error"> {{error}}</p>
+<p class="error">{{error}}</p>
 {{/if}}
 <form id="signup-form" method="POST" action="/register">
 <label for="firstname">First Name</label>
 <input type="text" id="firstName" name="firstName">
+
 <label for="lastname">Last Name</label>
 <input type="text" id="lastName" name="lastName">
+
 <label for="username">Username</label>
 <input type="text" id="username" name="username">
+
 <label for="password">Password</label>
 <input type="password" id="password" name="password">
+
 <label for="confirmPassword">Confirm Password</label>
 <input type="password" id="confirmPassword" name="confirmPassword">
+
 <label for="email">Email</label>
 <input type="text" id="email" name="email">
-<label for="city">city</label>
-<input type="text" id="city" name="city">
-<label for="state">state</label>
-<input type="text" id="state" name="state">
-<select id="hasProperty" name="hasProperty" required>
-    Do you have a property?
-    <option value="true">yes</option>
-    <option value="false">no</option>
+
+<label for="state">State</label>
+<select id="state" name="state">
+<option value="">Select a state</option>
+<option value="Alabama">Alabama</option>
+<option value="Alaska">Alaska</option>
+<option value="Arizona">Arizona</option>
+<option value="Arkansas">Arkansas</option>
+<option value="California">California</option>
+<option value="Colorado">Colorado</option>
+<option value="Connecticut">Connecticut</option>
+<option value="Delaware">Delaware</option>
+<option value="Florida">Florida</option>
+<option value="Georgia">Georgia</option>
+<option value="Hawaii">Hawaii</option>
+<option value="Idaho">Idaho</option>
+<option value="Illinois">Illinois</option>
+<option value="Indiana">Indiana</option>
+<option value="Iowa">Iowa</option>
+<option value="Kansas">Kansas</option>
+<option value="Kentucky">Kentucky</option>
+<option value="Louisiana">Louisiana</option>
+<option value="Maine">Maine</option>
+<option value="Maryland">Maryland</option>
+<option value="Massachusetts">Massachusetts</option>
+<option value="Michigan">Michigan</option>
+<option value="Minnesota">Minnesota</option>
+<option value="Mississippi">Mississippi</option>
+<option value="Missouri">Missouri</option>
+<option value="Montana">Montana</option>
+<option value="Nebraska">Nebraska</option>
+<option value="Nevada">Nevada</option>
+<option value="New Hampshire">New Hampshire</option>
+<option value="New Jersey">New Jersey</option>
+<option value="New Mexico">New Mexico</option>
+<option value="New York">New York</option>
+<option value="North Carolina">North Carolina</option>
+<option value="North Dakota">North Dakota</option>
+<option value="Ohio">Ohio</option>
+<option value="Oklahoma">Oklahoma</option>
+<option value="Oregon">Oregon</option>
+<option value="Pennsylvania">Pennsylvania</option>
+<option value="Rhode Island">Rhode Island</option>
+<option value="South Carolina">South Carolina</option>
+<option value="South Dakota">South Dakota</option>
+<option value="Tennessee">Tennessee</option>
+<option value="Texas">Texas</option>
+<option value="Utah">Utah</option>
+<option value="Vermont">Vermont</option>
+<option value="Virginia">Virginia</option>
+<option value="Washington">Washington</option>
+<option value="West Virginia">West Virginia</option>
+<option value="Wisconsin">Wisconsin</option>
+<option value="Wyoming">Wyoming</option>
 </select>
+
+<label for="city">City</label>
+<input type="text" id="city" name="city">
+
 <button id="submitButton" type="submit">Register</button>
 </form>
 <a href="/login">Already have an account? Click here to log-in</a>
