--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,4 +1,5 @@
-<h1>Register</h1>
+<div class="container">
+<h1 class="display-4">Register</h1>
 {{#if error}}
 <p class="error">{{error}}</p>
 {{/if}}
@@ -20,6 +21,9 @@
 
 <label for="email">Email</label>
 <input type="text" id="email" name="email">
+
+<label for="city">City</label>
+<input type="text" id="city" name="city">
 
 <label for="state">State</label>
 <select id="state" name="state">
@@ -76,9 +80,7 @@
 <option value="Wyoming">Wyoming</option>
 </select>
 
-<label for="city">City</label>
-<input type="text" id="city" name="city">
-
 <button id="submitButton" type="submit">Register</button>
 </form>
 <a href="/login">Already have an account? Click here to log-in</a>
+</div>
