--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,18 +1,22 @@
-<h1>Login</h1>
+<div class="jumbotron jumbotron-fluid">
+<div class="container">
+<h1 class="display-4">Login</h1>
 {{#if error}}
 <p class="error">{{error}}</p>
 {{/if}}
 <form id="signin-form" method="POST" action="/login">
-<div class="form-field">
-<label for="username">Username</label>
-<input type="text" id="username" name="username">
-<small></small>
-</div>
-<div class="form-field">
-<label for="password">Password</label>
-<input type="password" id="password" name="password">
-<small></small>
-</div>
-<button type="submit">Login</button>
+    <div class="form-group">
+    <label for="username">Username</label>
+    <input type="text" class="form-control" id="username" name="username">
+    <small></small>
+    </div>
+    <div class="form-group">
+    <label for="password">Password&nbsp;</label>
+    <input type="password" class="form-control" id="password" name="password">
+    <small></small>
+    </div>
+    <button type="submit">Login</button>
 </form>
-<a href="/register">Click here to register!</a>
+<a href="/register" class="btn btn-link">Click here to register!</a>
+</div>
+</div>
