--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,8 +15,6 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="/public/css/styles.css">
-{{#if data}}
-{{/if}}
 <link rel="shortcut icon" href="#">
 </head>
 <body>
@@ -25,8 +23,15 @@
 <div class="logo">
 <h1><a href="/">Apartment Hunt Helper</a></h1>
 </div>
+{{#if userData}}
+<form id="searchForm" action="/searchProperty" method="GET">
+<label for="searchProperty"></label>
+<input class="search-input" type="text" id="searchProperty" name="name" placeholder="Search for Properties">
+<button class="search-button" type="submit" value="Find Property">Search</button>
+</form>
+{{/if}}
 <div class="user-container">
-<!-- Add logic to show/hide based on user session -->
+{{!-- to show/hide based on user session --}}
 {{#if userData}}
 <a href="/user/profile">Profile</a>
 <a href="/logout">Logout</a>
