--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -26,7 +26,7 @@
     <p id="reportedItemIdError" class="error-msg"></p>
 
     <label for="reportReason">Reason for Report:</label>
-    <textarea id="reportReason" name="reportReason" placeholder="Give more information on what's been bothering you." required></textarea>
+    <textarea id="reportReason" name="reportReason" placeholder="Give more information on what's been bothering you." ></textarea>
     <p id="reportReasonError" class="error-msg"></p>
 
     <button type="submit">Submit Report</button>
