--- a/views/communityForum.handlebars
+++ b/views/communityForum.handlebars
@@ -1,11 +1,70 @@
+{{!-- ADD ROUTES. UPVOTE/DOWNVOTE THREADS AND COMMENTS --}}
+
 {{!-- Community Forum --}}
+<h2>Community Forum</h2>
+
+<div class="forum-threads">
+
+  {{#each threads}}
+
+  <div class="thread">
+
+    <h3>{{this.title}}</h3>
+
+    <p>Category: {{this.category}}</p>
+    <p>Created by: {{this.userId}}</p>
+    <p>Created Date: {{this.createdDate}}</p>
+    <p>Last Updated: {{this.lastUpdated}}</p>
+    <p>Likes: {{this.likes}}</p>
+    <p>Dislikes: {{this.dislikes}}</p>
+
+    <p><a href="/threads_routes/upvoteThread/{{this.threadId}}">Upvote Thread</a> / <a href="/threads_routes/downvoteThread/{{this.threadId}}">Downvote Thread</a></p>
+
+    <p>Comments:</p>
+
+    <ul>
+      
+      {{#each this.comments}}
+      <li>
+        <p>User ID: {{this.userId}}</p>
+        <p>Comment Text: {{this.commentText}}</p>
+        <p>Date Created: {{this.dateCreated}}</p>
+        <p>Likes: {{this.likes}}</p>
+        <p>Dislikes: {{this.dislikes}}</p>
+        <p><a href="/threads_routes/upvoteComment/{{this.threadId}}">Upvote Comment</a> / <a href="/threads_routes/downvoteComment/{{this.threadId}}">Downvote Comment</a></p>
+        
+        <!-- Replies 
+        
+        {{#if this.replies}}
+        <ul>
+          {{#each this.replies}}
+          <li>
+            <p>User ID: {{this.userId}}</p>
+            <p>Comment Text: {{this.commentText}}</p>
+            <p>Date Created: {{this.dateCreated}}</p>
+            <p>Likes: {{this.likes}}</p>
+            <p>Dislikes: {{this.dislikes}}</p>
+            <p><a href="/upvote/comment/{{this.commentId}}">Upvote Comment</a> / <a href="/downvote/comment/{{this.commentId}}">Downvote Comment</a></p>
+          </li>
+          {{/each}}
+        </ul>
+        {{/if}}-->
+      </li>
+      {{/each}}
+    </ul>
+  </div>
+  {{/each}}
+</div>
+
+<!--{{! Community Forum }}
 <h2>Community Forum</h2>
 <div class="forum-threads">
 {{#each threads}}
 <div class="thread">
 <h3>{{this.title}}</h3>
 <p>{{this.summary}}</p>
-<!-- Add link to full thread discussion -->
+<! Add link to full thread discussion >
 </div>
 {{/each}}
-</div>
+</div>-->
+
