--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,6 +5,12 @@ font-weight: 500;
 background-color: rgb(255, 255, 255);
 }
 
+#map {
+    height: 400px;
+    width: 100%;
+  }
+  
+
 .error{
 background-color: rgba(255, 0, 0, 0.642);
 border: 1px solid rgba(255, 0, 0, 0.642);
