--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -1,14 +1,14 @@
 {{!-- <form action="/report">
 </form> --}}
-<form id="reportForm" action="/report" method="POST">
-{{#if error}}
-<p class="error">{{error}}</p>
-{{/if}}
-<label for="reportedItem_type">Report on:</label>
+<form id="reportForm" action="/report/{{reportState}}/{{id}}" method="POST">
+    {{#if error}}
+    <p class="error">{{error}}</p>
+    {{/if}}
+    {{!-- <label for="reportedItem_type">Report on:</label>
     <select id="reportedItem_type" name="reportedItem_type" required>
         <option value="">Select a reason</option>
         <option value="property">Property</option>
-         <option value="landlord">Landlord</option>
+        <option value="landlord">Landlord</option>
     </select>
     <label for="reportedItemId">Reason to report:</label>
     <select id="reportedItemId" name="reportedItemId" required>
@@ -26,8 +26,54 @@
     <p id="reportedItemIdError" class="error-msg"></p>
 
     <label for="reportReason">Reason for Report:</label>
-    <textarea id="reportReason" name="reportReason" placeholder="Give more information on what's been bothering you." ></textarea>
+    <textarea id="reportReason" name="reportReason"
+        placeholder="Give more information on what's been bothering you."></textarea>
+    <p id="reportReasonError" class="error-msg"></p>
+
+    <button type="submit">Submit Report</button> --}}
+    {{#ifEquals reportState 'property'}}
+    write property report here
+        <label for="reportedItem_type">Report on property:</label>
+    <select value="{{reportState}}" id="reportedItem_type" name="reportedItem_type" required>
+        <option value="">Select a reason</option>
+        <option value="property">Property</option>
+        <option value="landlord">Landlord</option>
+    </select>
+    <label for="reportedItemId">Reason to report:</label>
+    <select id="reportedItemId" name="reportedItemId" required>
+        <option value="">Select a reason</option>
+        <option value="maintenance">Maintenance</option>
+        <option value="safety">Safety Concerns</option>
+        <option value="unfair_treatment">Unfair Treatment</option>
+        <option value="violation_of_lease">Violation of Lease Agreement</option>
+        <option value="health_code_violations">Health Code Violations</option>
+        <option value="financial_disputes">Financial Disputes</option>
+        <option value="noise_or_disturbances">Noise or Disturbances</option>
+        <option value="illegal_activities">Illegal Activities</option>
+        <option value="property_mismanagement">Property Mismanagement</option>
+    </select>
+    <p id="reportedItemIdError" class="error-msg"></p>
+
+    <label for="reportReason">Reason for Report:</label>
+    <textarea id="reportReason" name="reportReason"
+        placeholder="Give more information on what's been bothering you."></textarea>
     <p id="reportReasonError" class="error-msg"></p>
 
     <button type="submit">Submit Report</button>
+    {{/ifEquals}}
+    {{#ifEquals reportState 'comment'}}
+    write property comment here
+    {{/ifEquals}}
+    {{#ifEquals reportState 'review'}}
+    write property review here
+    {{/ifEquals}}
+    {{#ifEquals reportState 'thread'}}
+    write property thread here
+    {{/ifEquals}}
+    {{#ifEquals reportState 'landlord'}}
+    write property landlord here
+    {{/ifEquals}}
+    {{#ifEquals reportState 'reply'}}
+    write property reply here
+    {{/ifEquals}}
 </form>
