--- a/views/addProperty.handlebars
+++ b/views/addProperty.handlebars
@@ -1,8 +1,12 @@
 <div class="container">
+
 <h1 class="display-4">Add Property to Database</h1>
+
 {{#if error}}
 <p class="error">{{error}}</p>
 {{/if}}
+
+<div id="errorDiv" class="error-message" style="color: red;"></div>
 
 <form id="addProperty-form" method="POST" action="/addProperty">
 
@@ -90,10 +94,24 @@
 </select>
 
 <label for="bedrooms">Number of Bedrooms</label>
-<input type="number" id="bedrooms" name="bedrooms">
+<select id="bedrooms" name="bedrooms">
+    <option value="0">0</option>
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+    <option value="4">4</option>
+    <option value="5">5</option>
+</select>
 
 <label for="bathrooms">Number of Bathrooms</label>
-<input type="number" id="bathrooms" name="bathrooms">
+<select id="bathrooms" name="bathrooms">
+    <option value="0">0</option>
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+    <option value="4">4</option>
+    <option value="5">5</option>
+</select>
 
 <button id="submitButton" type="submit">Register</button>
 </form>
