--- a/views/moderator.handlebars
+++ b/views/moderator.handlebars
@@ -17,7 +17,7 @@
                     <button class="btn btn-accept" type="submit">Accept</button>
                 </form>
                 <!-- Button to reject the report -->
-                <form action="/moderator/reject//{{this.userId}}/{{this.report_id}}" method="POST">
+                <form action="/moderator/reject/{{this.userId}}/{{this.report_id}}" method="POST">
                     <button class="btn btn-reject" type="submit">Reject</button>
                 </form>
             </div>
