--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,56 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>{{title}}</title>
-<script src="https://kit.fontawesome.com/9eb0363441.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap">
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <!-- Meta -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <!-- Title -->
+  <title>{{title}}</title>
 
-<!-- Latest compiled and minified JavaScript -->
-<link rel="stylesheet" href="/public/css/styles.css">
-<link rel="shortcut icon" href="#">
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script src="/public/js/client_side_validation.js"></script>
-<script src="/public/js/propertySearchAjax.js"></script>
+  <!-- Styling -->
+  <script src="https://kit.fontawesome.com/9eb0363441.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <link rel="stylesheet" href="/public/css/styles.css">
+  <link rel="shortcut icon" href="#">
+
+  <!-- Javascript Scrips -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="/public/js/client_side_validation.js"></script>
+  <script src="/public/js/propertySearchAjax.js"></script>
 
 </head>
+
 <body>
+
 <header>
+
 <nav>
-<div class="logo">
-<h1><a href="/">Apartment Hunt Helper</a></h1>
-</div>
-{{#if userData}}
-<form id="searchForm" method="GET">
-  <label for="searchType">Search Type:</label>
-  <select id="searchType" name="type">
-    <option value="">Select filter</option>
-      <option value="name">Name</option>
-    <option value="address">Address</option>
-    <option value="city">City</option>
-    <option value="state">State</option>
-    <option value="zip">Zip Code</option>
-  </select>
-  <label for="searchQuery">Search Query:</label>
-  <input class="search-input" type="text" id="searchQuery" name="query" placeholder="search here...">
-  <button class="search-button" type="submit">Search</button>
-<div id='errorDiv' hidden></div>
-</form>
-{{/if}}
-<div class="user-container">
-{{!-- to show/hide based on user session --}}
-{{#if userData}}
-<a href="/user/profile">Profile</a>
-<a href="/logout">Logout</a>
-{{/if}}
-</div>
+  <div class="logo">
+    <h1><a href="/">Apartment Hunt Helper</a></h1>
+  </div>
+
+  {{#if userData}}
+
+  <form id="searchForm" method="GET">
+    
+    <label for="searchType">Search Type:</label>
+      <select id="searchType" name="type">
+        <option value="">Select filter</option>
+        <option value="name">Name</option>
+        <option value="address">Address</option>
+        <option value="city">City</option>
+        <option value="state">State</option>
+        <option value="zip">Zip Code</option>
+      </select>
+
+    <label for="searchQuery">Search Query:</label>
+      <input class="search-input" type="text" id="searchQuery" name="query" placeholder="Search here...">
+      <button class="search-button" type="submit">Search</button>
+
+    <div id='errorDiv' hidden></div>
+
+  </form>
+
+  {{/if}}
+
+  <div class="user-container">
+  {{!-- to show/hide based on user session --}}
+    {{#if userData}}
+      <a href="/user/profile">Profile</a>
+      <a href="/logout">Logout</a>
+    {{/if}}
+  </div>
+
 </nav>
 </header>
 
@@ -58,12 +72,12 @@
     <ul id="searchResults" hidden></ul>
     <div id="propertyDetails" hidden></div>
     <a id="rootLink" href="/" hidden>New Search</a>
-{{{body}}}
+    {{{body}}}
 </main>
 
 {{#if success}}
 <p class="success"> {{success}}</p>
 {{/if}}
 
-</body>
+</body> 
 </html>
