Added route to update property

--- a/views/moderator.handlebars
+++ b/views/moderator.handlebars
@@ -24,3 +24,9 @@
             </div>
         {{/each}}
     </div>
+
+    <div id="addProperty">
+        <form id="addProperty" method="GET" action="/property/addProperty">
+            <button type="submit">Add Property</button>
+        </form>
+    </div>
